<resources>
    <string name="app_name">BookWeGo</string>
    <string name="signupstartingtext">Don\'t have an account?</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="term_amp_condition"><u>Term &amp; Condition</u></string>
    <string name="map_api2">AIzaSyDKpkPtlJLZC0KR-p-cvb4QXG_5JtXFL40</string>
    <string name="main_key">AIzaSyC3LH-S0_pS8UFyR3m7lomT_UGnGZc8hjw</string>
    <string name="permission">Please first turn on permission</string>
    <string name="gps_disable">GPS is disabled in your device. Please turn on location of your device</string>
    <string name="turn_on">Turn on</string>
    <string name="facebook_app_id">627777407631340</string>
    <string name="fb_login_protocol_scheme">fb627777407631340</string>
    <string name="CONSUMER_KEY">CfiUeYtoEKPrbQ9bLbsFEywuJ</string>
    <string name="CONSUMER_SECRET">2DEZMbMHBxwJKqMwKw5RYBfyS85PuLL72yq0oE1tFfIaD5C68e</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="reservations">Reservations</string>
    <string name="orders">Orders</string>
    <string name="payment_history">Payment History</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="my_reservations">My Reservations</string>
    <string name="get_in_touch">GET IN TOUCH!</string>
    <string name="always_within_your_reach">Always within your reach</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="payments_history">Payment History</string>
    <string name="track_order"><u>Track Order</u></string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="refer">Refer &amp; Earn</string>
    <string name="faq">FAQ</string>
    <string name="news_amp_promotions"><![CDATA[News & Promotions]]></string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="payments">Payments</string>
    <string name="change_password">Change Password</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="receive_newsletter">Receive Newsletter</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_polices">Privacy Policy</string>
    <string name="tell_restaurants">Tell the restaurant anything about your online food order/takeaway</string>
    <string name="have_a_coupon_enter_here">Have a Coupon? Enter here</string>
    <string name="more_copun"><u>More Coupon</u></string>
    <string name="collection"><![CDATA[Book your Collection / Delivery Time & Discount]]></string>
    <string name="order_takeaway">Order / Takeaway</string>
    <string name="cart">Cart</string>
    <string name="self_collection">Self-Collection</string>
    <string name="restaurant_bill">Restaurant Bill</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="this_restaurant_provides_food_devlivery_to_your_home">This restaurant provides food devlivery to your home</string>
    <string name="to_pay">To Pay</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="rs">\u20A8</string>
    <string name="Rs">\u20B9</string>
    <string name="reset_password">Reset Password</string>
    <string name="previous_password">Previous Password</string>
    <string name="new_password">New Password</string>
    <string name="what_is_bookwego">What is BookWeGo?</string>
    <string name="help">Help</string>
    <string name="restaurants">Restaurants</string>
    <string name="services">Services</string>
    <string name="payment">Payment</string>
    <string name="you_saved_card">You saved card</string>
    <string name="referral_program">Referral Program</string>
    <string name="voucher">Earn Cash &amp; Vouchers</string>
    <string name="refer_desc">If you invite each friend (whom registers &amp; book his/her\n 1st reservation) to BookWeGo, both you and your friend\n will earn cash voucher $5 each.</string>
    <string name="news_promotions">News &amp; Promotions</string>
    <string name="order_status">Order Status</string>
    <string name="order_sta">ORDER STATUS</string>
    <string name="order_recived">Order Recived</string>
    <string name="food_being_prepared">Food Being Prepared</string>
    <string name="food_packed">Food Packed</string>
    <string name="food_out_for_delivery">Food out for Delivery</string>
    <string name="food_delivered">Food Delivered</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="available_coupons">AVAILABLE COUPONS</string>
    <string name="more_details">MORE DETAILS</string>
    <string name="apply">APPLY</string>
    <string name="filter">Filter</string>
    <string name="menu">Menu</string>
    <string name="view_on_map"><u>View on map</u></string>
    <string name="reviews"><u>35 reviews</u></string>
    <string name="booking_details">Booking Details</string>
    <string name="book_a_table">BOOK A TABLE</string>
    <string name="edit_booking_details">Edit Booking Details</string>
    <string name="title_activity_matrix">MatrixActivity</string>
    <string name="error_testing">Please enter email id</string>
    <string name="connected_with_wifi">Connected with wifi</string>
    <string name="connected_with_mobile">Connected with mobile network</string>
    <string name="you_are_offline">Yout are offline.Please check your internet connection.</string>
    <string name="log_in">Log In</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password_login">Password</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="register">Register</string>
    <string name="or_login_with">or login with</string>
    <string name="and_the">and the</string>
    <string name="register_new">Register</string>
    <string name="first_name_r">First Name</string>
    <string name="last_name_r">Last Name</string>
    <string name="email_r">Email</string>
    <string name="phone_r">Phone</string>
    <string name="age_or_birth_date_r">Age or Birth Date</string>
    <string name="gender_r">Gender</string>
    <string name="address_r">Address</string>
    <string name="citizenship_r">Citizenship</string>
    <string name="next_r">Next</string>
    <string name="employment">Employment</string>
    <string name="income_level">Income Level</string>
    <string name="date_joined">Date Joined</string>
    <string name="_2_food_cuisines_do_you_like_best">2 food cuisines do you like best?</string>
    <string name="service_do_you_like_best">Service do you like best?</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_r">Already have an account?</string>
    <string name="by_login_you_are_agerring_to_the">By Login you are agerring to the</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_your_password_f">FORGOT YOUR PASSWORD?</string>
    <string name="about_forgot_password">Enter your email below to receivce your\n password reset instructions</string>
    <string name="submit">Submit</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="terms">Terms Conditions</string>
    <string name="string_first_name">Please enter your first name</string>
    <string name="string_last_name">Please enter your last name</string>
    <string name="string_email">Please enter your email</string>
    <string name="string_phone_number">Please enter your phone number</string>
    <string name="string_dateofbirth">Please select your date of birth</string>
    <string name="string_gender">Please select your gender</string>
    <string name="string_address">Please enter your address</string>
    <string name="string_citizinship">Please select your citizinship</string>
    <string name="string_validemail">Please enter valid email</string>
    <string name="r_select_employment">Please select employment</string>
    <string name="r_income">Please select income level</string>
    <string name="r_date_of_join">Please enter date of join</string>
    <string name="r_food_like_best">Please choose food do you like best</string>
    <string name="r_service_like">Service do you like best?</string>
    <string name="r_password_enter">Please enter password</string>
    <string name="password_pattern_hint">Password should contain 1 numeric or 1 character or 1 special character</string>
    <string name="r_confirm_password">Please enter confirm password</string>
    <string name="r_password_not_match">Password does not match</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="g_male">Male</string>
    <string name="g_female">Female</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="nothing_to_show">Noting to show</string>
    <string name="password_length">Password between 6 and 16 alphanumeric characters</string>
    <string name="username_length">first name should be between 3 to 15 characters</string>
    <string name="lastname_length">last name should be between 3 to 15 characters</string>
    <string name="email_password_required">Email and Password fields are required</string>
    <string name="enter_valid_phone_number">Please enter valid phone number</string>
    <string name="internet_connection">Please check your internet connection !</string>
    <string name="old_password">Please enter your old password</string>
    <string name="new_passwords">Please enter your new password</string>
    <string name="confirmnew_passwords">Please confirm your new password</string>
    <string name="c_newpassword">Enter new password</string>
    <string name="c_oldpassword">Enter old password</string>
    <string name="c_confirmpassword">Enter confirm password</string>
    <string name="enter_otp">Please enter otp first</string>
    <string name="socail_login_fail">Facebook Login Cancel</string>
    <string name="country_code">Country code required</string>
    <string name="write_message">Please write your message</string>
    <string name="length_of_message">message characters length should be between 50 to 250 characters</string>
    <string name="populer_place">Find out What\'s hot on BookWeGo and dig up your most\npopular place</string>
    <string name="try_again">Try Again</string>
    <string name="ooops">Ooops!</string>
    <string name="please_select_state">Please select state</string>
    <string name="please_select_city">Please select City</string>
    <string name="recommending">Person Recommending</string>
    <string name="total_review">Reviews</string>
    <string name="write_comment">Please write your comment</string>
    <string name="rate_the_app">First rate app</string>
</resources>